--- a/docs.html
+++ b/docs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مستندات سیستم مشاور هوشمند کنکور PRO</title>
+    <title>مستندات سیستم مشاور هوشمند کنکور Konkurino</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
@@ -39,7 +39,7 @@
     <!-- هدر نئونی -->
     <header class="py-12 bg-gradient-to-r from-blue-900/30 to-sky-900/30 border-b border-sky-800/50">
         <div class="container mx-auto px-4 text-center">
-            <h1 class="text-5xl font-bold mb-4 neon-text text-sky-400">مشاور هوشمند کنکور PRO</h1>
+            <h1 class="text-5xl font-bold mb-4 neon-text text-sky-400">مشاور هوشمند کنکور Konkurino</h1>
             <p class="text-xl text-slate-300 max-w-3xl mx-auto">
                 سیستم پیشرفته تحلیل نقاط ضعف و برنامه‌ریزی مطالعاتی با هوش مصنوعی
             </p>
@@ -63,7 +63,7 @@
                     <span>معرفی سیستم</span>
                 </h2>
                 <p class="text-slate-300 mb-6 leading-relaxed">
-                    سیستم مشاور هوشمند کنکور PRO یک پلتفرم تحلیلی پیشرفته است که با استفاده از الگوریتم‌های یادگیری ماشین و بهینه‌سازی، نقاط ضعف دانش‌آموزان را شناسایی کرده و برنامه‌ای شخصی‌سازی شده برای بهبود عملکرد تحصیلی ارائه می‌دهد.
+                    سیستم مشاور هوشمند کنکور Konkurino یک پلتفرم تحلیلی پیشرفته است که با استفاده از الگوریتم‌های یادگیری ماشین و بهینه‌سازی، نقاط ضعف دانش‌آموزان را شناسایی کرده و برنامه‌ای شخصی‌سازی شده برای بهبود عملکرد تحصیلی ارائه می‌دهد.
                 </p>
                 <div class="grid md:grid-cols-3 gap-6 mt-8">
                     <div class="gradient-card rounded-xl p-6 glow-hover">
@@ -142,7 +142,7 @@
                     <p class="text-slate-300 mb-4">پس از نصب کتابخانه‌ها، برنامه را با دستور زیر اجرا کنید:</p>
                     <div class="bg-gray-900 rounded-lg p-4 mb-4 overflow-x-auto">
                         <code class="text-green-400">
-                            streamlit run کنکور_پرو.py
+                            streamlit run main.py
                         </code>
                     </div>
                     <p class="text-slate-300">
@@ -460,7 +460,7 @@
     <!-- پاورقی -->
     <footer class="py-12 border-t border-slate-800 bg-gradient-to-r from-blue-900/20 to-sky-900/20">
         <div class="container mx-auto px-4 text-center">
-            <h3 class="text-2xl font-bold mb-6 text-sky-400">مشاور هوشمند کنکور PRO</h3>
+            <h3 class="text-2xl font-bold mb-6 text-sky-400">مشاور هوشمند کنکور Konkurino</h3>
             <p class="text-slate-400 max-w-2xl mx-auto mb-8">
                 سیستم پیشرفته تحلیل نقاط ضعف و برنامه‌ریزی مطالعاتی با استفاده از آخرین تکنیک‌های هوش مصنوعی و بهینه‌سازی
             </p>
